--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "run-android": "gulp run-android"
   },
   "dependencies": {
+    "@types/react-router-native": "^4.2.0",
     "antd-mobile": "^2.1.1",
+    "formstate": "^1.0.0",
     "gulp-image": "^4.3.0",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
+    "react-loadable": "^5.3.1",
     "react-native": "^0.51.0",
     "react-navigation": "^1.0.0-beta.21",
+    "react-router-native": "^4.2.0",
     "styled-components": "^2.2.4"
   },
   "devDependencies": {
