--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "formstate": "^1.0.0",
     "gulp-image": "^4.3.0",
     "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
     "react": "^16.2.0",
     "react-loadable": "^5.3.1",
     "react-native": "^0.51.0",
@@ -45,6 +44,7 @@
     "jest": "21.2.1",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
+    "gulp-image": "^4.3.0",
     "react-test-renderer": "^16.2.0",
     "ts-jest": "^21.2.4",
     "tslib": "^1.8.1",
